--- a/index.htm
+++ b/index.htm
@@ -79,13 +79,15 @@
 VK.init(
   function() {
     console.log('VK API ready');
-    onReady(); // определено в widget-editor.js
+    onReady();
   },
   function() {
     console.error('VK init failed', arguments);
   },
-  '5.131'
+  '5.131',
+  { apiId: 7100465 }
 );
+
 </script>
 <!-- /VK scripts -->
 
